--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11p,a4paper]{report}
 
-\usepackage{amsmath}		                        %Matheschreibweise
-\usepackage{amssymb}                            %&Symbole
+\usepackage{amsmath}		                      %Matheschreibweise...
+\usepackage{amssymb}                              %...Und Symbole
 \usepackage{mathrsfs}
 \usepackage{amsfonts}
 \usepackage[T1]{fontenc}
@@ -9,33 +9,33 @@
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einfügen
 \usepackage[listings,skins,breakable]{tcolorbox}
-\usepackage{tikz,pgf,pgfplots}                  %Grafiken zeichnen
+\usepackage{tikz,pgf,pgfplots}                    %Grafiken zeichnen
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
-\usepackage{tabu}                               %Bessere Tabellen
-\usepackage{esvect}
-\usepackage{listings}                           %für Pseudocode/Code
-\usepackage{color}                              %und dessen Einf"arbung
+\usepackage{tabu}                                 %Bessere Tabellen
+\usepackage{esvect}                               %Schönere Vektoren
+\usepackage{listings}                             %Für Pseudocode/Code...
+\usepackage{color}                                %...Und dessen Einfärbung
 \usepackage{booktabs}
-\usepackage{enumitem}                           %angepasstes enumerieren
-\usepackage{enumerate}                          %Zeichen der Enumerierung beliebig wählbar
+\usepackage{enumitem}                             %Angepasstes enumerieren
+\usepackage{enumerate}                            %Zeichen der Enumerierung beliebig wählbar
 \usepackage[hidelinks=true]{hyperref}
-\usepackage[makeroom]{cancel}                   %Durchgestrichene Terme mit \cancel{}
-\usepackage{tkz-tab}                            %für Monotonietabellen??
-\usepackage{marvosym}                           %Symbole wie Blitze und co. ...
-\usepackage{stackengine}
+\usepackage[makeroom]{cancel}                     %Durchgestrichene Terme mit \cancel{}
+\usepackage{tkz-tab}                              %Für Monotonietabellen??
+\usepackage{marvosym}                             %Symbole wie Blitze und co. ...
+\usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
 \usepackage{scalerel}
 \usepackage{xcolor}
-
-
 \usepackage{epigraph}
-\pgfplotsset{compat=1.15}
+
+
+\pgfplotsset{compat=1.14}
 \usetikzlibrary{arrows}
 
 
-\nonstopmode                                    %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
+\nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
 
 
 %Zahlenmengen-darstellung:
