Irgendwas von dem anderen Rechner, das ich noch nicht hochgeladen habe

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -376,6 +376,16 @@
 
 \section{Kreuzprodukt}
 
+    \paragraph{} Das Kreuzprodukt ist das zweite nützliche Werkzeug welches in der Vektorgeometrie genutzt wird. Es dient hauptsächlich zur einfachen Berechnung
+    eines zu zwei \textbf{nicht kollinearen} Vektoren $\vv{u}$ und $\vv{v}$ orthogonalen Vektors $\vv{i}$. Seine Formel lautet wie folgt:
+    $\vv{i} = \vv{u} \times \vv{v} = \left(\begin{array}{c} u_{\textcolor{red}{2}} \cdot v_{\textcolor{orange}{3}} - u_{\textcolor{red}{3}} \cdot v_{\textcolor{orange}{2}} \\ u_{\textcolor{red}{3}} \cdot v_{\textcolor{orange}{1}} - u_{\textcolor{red}{1}} \cdot v_{\textcolor{orange}{3}} \\ u_{\textcolor{red}{1}} \cdot v_{\textcolor{orange}{2}} - u_{\textcolor{red}{2}} \cdot v_{\textcolor{orange}{1}} \end{array}\right)$.
+    Zudem gilt: $|\vv{i}| = $
+
+    \begin{Beweis}
+
+    \end{Beweis}
+
+
 \section{Geraden}
 
     \subsection{Darstellungen}
