Graphen zeichnen macht irgendwie Spaß

--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -180,38 +180,6 @@ Abschnittweise Integration:
   $$\int_a^b f(x)dx+ \int_b^c f(x)dx = F(a)-F(b)-(F(b)-F(c)) = F(c)-F(a) = \int_a^c f(x)dx$$
 \end{Beweis}
 
-\begin{center}
-    \definecolor{lightblu}{rgb}{0,0,0.3}
-    \definecolor{lightgree}{rgb}{0,0.3,0}
-    \begin{tikzpicture}
-        \draw[->,line width=0.8pt] (-5.5,0) -- (5.5,0) node[below] {$x_1$};
-        \draw[->,line width=0.8pt] (0,-5.5) -- (0,5.5) node[right] {$x_2$};
-        \foreach  \x in {-5,...,-1,1,2,...,5}
-            \draw[line width=0.8pt] (\x,0.1) -- (\x,-0.1) node[below] {\x};
-        \foreach  \x in {-5,...,-1,1,2,...,5}
-            \draw[line width=0.8pt] (-0.1,\x) -- (0.1,\x) node[right] {\x};
-
-        \draw (-0.3,-0.3) node {$O$};
-
-        \draw[gray,very thin] (-5,-5) grid (5,5);
-
-        \draw[line width=0.1pt,color=lightblu,fill=lightblu,fill opacity=0.3] (-2.5,0) -- (-2.5,-2.5) ..controls(-1.62,-3.06) ..(0,0) -- cycle;
-        \draw[line width=0.1pt,color=lightgree,fill=lightgree,fill opacity=0.3] (0,0) ..controls(1.94,3.78) ..(3.5,4.5) -- (3.5,0) -- cycle;
-
-        \draw[line width=1.5pt,color=red] (-5,2) ..controls(-2,-4) ..(0,0);
-        \draw[line width=1.5pt,color=red] (0,0) ..controls(2,4) ..(5,5);
-
-        \draw[line width=1.2pt,color=orange] (-2.5,-2.5) -- (-2.5,0) node[above] {a};
-        \draw[line width=1.2pt,color=orange] (0,-0.2) node[right] {b};
-        \draw[line width=1.2pt,color=orange] (3.5,4.5) -- (3.5,0) node[below] {c};
-
-        \draw[line width=0.8pt,color=lightblu] (-1.5,-1.1) node {$A$};
-        \draw[line width=0.8pt,color=lightgree] (2.3,1.9) node {$B$};
-
-        \draw[line width=0.8pt,color=red] (2,4) node {$K$};
-    \end{tikzpicture}
-\end{center}
-
 \begin{Theorem}
   Sei eine in $[a;b]$ stetige Funktion $f$. Wenn für $m,M \in \R$ gilt: $m\leq f(t) \leq M \; \forall t \in [a;b]$, dann gilt:
   $$m(b-a) \leq \int_a^b f(t)dt \leq M(b-a)$$
@@ -473,6 +441,55 @@ ytick={0},]
 \end{axis}
 \end{tikzpicture}
 (Achtung Fläche kann nicht richtig gezeichnet werden (GeoGebra ist schuld))
+
+\begin{center}
+    \definecolor{lightblu}{rgb}{0,0,0.3}
+    \definecolor{lightgree}{rgb}{0,0.3,0}
+    \begin{tikzpicture}
+        \draw[gray,very thin] (-5,-5) grid (5,5);
+
+        \draw[->,line width=0.8pt] (-5.5,0) -- (5.5,0) node[below] {$x_1$};
+        \draw[->,line width=0.8pt] (0,-5.5) -- (0,5.5) node[right] {$x_2$};
+        \foreach  \x in {-5,...,-1,1,2,...,5}
+            \draw[line width=0.8pt] (\x,0.1) -- (\x,-0.1) node[below] {\x};
+        \foreach  \x in {-5,...,-1,1,2,...,5}
+            \draw[line width=0.8pt] (-0.1,\x) -- (0.1,\x) node[right] {\x};
+
+        \draw[line width=0.1pt,color=lightblu,fill=lightblu,fill opacity=0.3] (-2.5,0) -- (-2.5,-2.5) ..controls(-1.62,-3.072) ..(0,0) -- cycle;
+        \draw[line width=0.1pt,color=lightgree,fill=lightgree,fill opacity=0.3] (0,0) ..controls(1.94,3.78) ..(3.5,4.5) -- (3.5,0) -- cycle;
+
+        \draw[line width=1.5pt,color=red] (-5,2) ..controls(-2,-4) ..(0,0);
+        \draw[line width=1.5pt,color=red] (0,0) ..controls(2,4) ..(5,5);
+
+        \draw[line width=1.2pt,color=orange] (-2.5,-2.5) -- (-2.5,0) node[above] {a};
+        \draw[line width=1.2pt,color=orange] (0,-0.2) node[right] {$x_1$};
+        \draw[line width=1.2pt,color=orange] (3.5,4.5) -- (3.5,0) node[below] {b};
+
+        \draw[line width=1.2pt,color=orange] (-2.5,-1.5) -- (-1,0);
+        \draw[line width=1.2pt,color=orange] (-2.5,-0.5) -- (-2,0);
+        \draw[line width=1.2pt,color=orange] (-2.5,-2.5) -- (3.5,3.5);
+        \draw[line width=1.2pt,color=orange] (1,0) -- (3.5,2.5);
+        \draw[line width=1.2pt,color=orange] (2,0) -- (3.5,1.5);
+        \draw[line width=1.2pt,color=orange] (3,0) -- (3.5,0.5);
+        \draw[line width=1.2pt,color=orange] (1,2) -- (3.5,4.45);
+
+        \draw[line width=1.2pt,color=black] (5.5,-2) -- (7.5,-2) -- (7.5,-3) -- (5.5,-3) -- cycle;
+        \draw[line width=1.2pt,color=orange] (5.5,-3) -- (6.5,-2);
+        \draw[line width=1.2pt,color=orange] (6.5,-3) -- (7.5,-2);
+        \draw[line width=1.2pt,color=orange] (5.5,-2.5) -- (6,-2);
+        \draw[line width=1.2pt,color=orange] (6,-3) -- (7,-2);
+        \draw[line width=1.2pt,color=orange] (7,-3) -- (7.5,-2.5);
+        \draw[line width=3pt] (7.8,-2.5) node {:};
+        \draw[line width=2pt] (9,-2.5) node {$\textcolor{orange}{C} = \textcolor{lightblue}{A} + \textcolor{lightgree}{B}$};
+        \draw[line width=2pt] (10.75,-3) node {$ = |{\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx}| + |{\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}|$};
+
+        \draw (-0.3,-0.3) node {$O$};
+        \draw[line width=0.8pt,color=lightblu] (-1.5,-1.1) node {$A$};
+        \draw[line width=0.8pt,color=lightgree] (2.3,1.9) node {$B$};
+
+        \draw[line width=0.8pt,color=red] (2,4) node {$K$};
+    \end{tikzpicture}
+\end{center}
 \\
 \begin{Beispiel}
   $f(x)=x^2-2x^3;x\in \R$\\
@@ -502,6 +519,65 @@ ytick={0},]
   Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in 'MATH'>'NUM' oder über Alpha-F2) lässt sich die Fläche berechnen über 2nd-CALC mit der Option Integral.\\
   Hierzu wählt man $Y_2$ aus und gibt $a$ und $b$ an.
 \end{GTR-Tipp}
+\begin{center}
+    \definecolor{lightblu}{rgb}{0,0,0.3}
+    \definecolor{lightgree}{rgb}{0,0.3,0}
+    \begin{tikzpicture}
+        \draw[gray,very thin] (-5,-5) grid (5,5);
+
+        \draw[->,line width=0.8pt] (-5.5,0) -- (5.5,0) node[below] {$x_1$};
+        \draw[->,line width=0.8pt] (0,-5.5) -- (0,5.5) node[right] {$x_2$};
+        \foreach  \x in {-5,...,-1,1,2,...,5}
+            \draw[line width=0.8pt] (\x,0.1) -- (\x,-0.1) node[below] {\x};
+        \foreach  \x in {-5,...,-1,1,2,...,5}
+            \draw[line width=0.8pt] (-0.1,\x) -- (0.1,\x) node[right] {\x};
+
+        \draw[line width=0.1pt,color=lightblu,fill=lightblu,fill opacity=0.3] (-2.5,0) -- (-2.5,2.43) ..controls(-1.59,3.21) ..(0,0) -- cycle;
+        \draw[line width=0.1pt,color=lightgree,fill=lightgree,fill opacity=0.3] (0,0) ..controls(1.94,3.78) ..(3.5,4.5) -- (3.5,0) -- cycle;
+
+        \draw[line width=1.5pt,color=red] (-5,2) ..controls(-2,-4) ..(0,0);
+        \draw[line width=1.5pt,color=red] (0,0) ..controls(2,4) ..(5,5);
+
+        \draw[line width=1.5pt,color=red] (-4,0) ..controls(-1.8,3.8) ..(0,0);
+        \draw[line width=7pt,color=white,dashed] (-4,0) ..controls(-1.8,-3.8) ..(0,0);
+        % Repair the damage caused by the line above
+        \draw[line width=0.8pt] (-4,0) -- (-3.85,0);
+        \draw[line width=0.8pt] (0,-0.05) -- (0,-0.3);
+
+        \draw[line width=1.2pt,color=orange] (-2.5,2.4) -- (-2.5,0) node[below] {a};
+        \draw[line width=1.2pt,color=orange] (0,-0.2) node[right] {$x_1$};
+        \draw[line width=1.2pt,color=orange] (3.5,4.5) -- (3.5,0) node[below] {b};
+
+        \draw[line width=1.2pt,color=orange] (-2.5,0.5) -- (-1,2);
+        \draw[line width=1.2pt,color=orange] (-2.5,1.5) -- (-1.4,2.6);
+        \draw[line width=1.2pt,color=orange] (-2,0) -- (-0.65,1.35);
+        \draw[line width=1.2pt,color=orange] (-1,0) -- (-0.3,0.7);
+        \draw[line width=1.2pt,color=orange] (0,0) -- (3.5,3.5);
+        \draw[line width=1.2pt,color=orange] (1,0) -- (3.5,2.5);
+        \draw[line width=1.2pt,color=orange] (2,0) -- (3.5,1.5);
+        \draw[line width=1.2pt,color=orange] (3,0) -- (3.5,0.5);
+        \draw[line width=1.2pt,color=orange] (1,2) -- (3.5,4.45);
+
+        \draw[line width=1.2pt,color=black] (5.5,-2) -- (7.5,-2) -- (7.5,-3) -- (5.5,-3) -- cycle;
+        \draw[line width=1.2pt,color=orange] (5.5,-3) -- (6.5,-2);
+        \draw[line width=1.2pt,color=orange] (6.5,-3) -- (7.5,-2);
+        \draw[line width=1.2pt,color=orange] (5.5,-2.5) -- (6,-2);
+        \draw[line width=1.2pt,color=orange] (6,-3) -- (7,-2);
+        \draw[line width=1.2pt,color=orange] (7,-3) -- (7.5,-2.5);
+        \draw[line width=3pt] (7.8,-2.5) node {:};
+        \draw[line width=2pt] (9,-2.5) node {$\textcolor{orange}{C} = \textcolor{lightblue}{A} + \textcolor{lightgree}{B}$};
+        \draw[line width=2pt] (10.57,-3.05) node {$ = {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx} + {\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}$};
+        \draw[line width=2pt] (9.47,-3.6) node {$ = {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{b}} f(x)dx}$};
+
+        \draw (-0.3,-0.3) node {$O$};
+        \draw[line width=0.8pt,color=lightblu] (-1.5,1.1) node {$A$};
+        \draw[line width=0.8pt,color=lightgree] (2.3,1.9) node {$B$};
+
+        \draw[line width=0.8pt,color=red] (1.45,4.05) node{"$ $};
+        \draw[line width=0.8pt,color=red] (1.8,4) node {$|K|$};
+        \draw[line width=0.8pt,color=red] (2.15,4.05) node{"$ $};
+    \end{tikzpicture}
+\end{center}
 \subsection{Fläche zwischen zwei Funktionen}
 
 \subsection{Volumenangaben mittels Integralen}
