Induktion und Physik

--- a/kap15/kap15.tex
+++ b/kap15/kap15.tex
@@ -156,10 +156,42 @@ $$ \vv{F}_{A/B} = K \cdot \dfrac{q_{a}\cdot q_{b}}{r^2} \cdot \vv{U}_{A/B} $$
 avec\\
 $$K=\dfrac{1}{4\pi\varepsilon_{0}}= 9,0\cdot 10^9(S.I.)$$
 $\varepsilon_{0}$: permittivité du vide (réponse d'un milieu donné a un champ électrique appliqué) ($8,85\cdot 10^9$)\\
-\danger[5ex] \qquad $\vv{F}$ et $\vv{E}$ n'ont pas forcément le meme sens
+\danger[5ex] \qquad $\vv{F}$ et $\vv{E}$ n'ont pas forcément le meme sens, cela dépend de la charge $q$\\\\
 
-
+La relation entre force électrique et champ électrique s'exprime avec $q$ (Coulombs), charge de source:
+$$\vv{F_{e}}=q\cdot \vv{E}$$\\
+$$\Rightarrow F_{e}=|q|\cdot E$$\\\\
+Le champ électrique s'exprime donc de cette maniere:
+$$\vv{E}= \dfrac{1}{4\pi\varepsilon_{0}}\cdot\dfrac{q}{r^2}\cdot\vv{U}_{A/B}$$\\
+$\vv{E}$ va dans le sens des potentiels décroissants\\
+Les lignes de champ sont tangentes aux vecteurs champ électrique tandis que les équipotentielles relient les points ou le champ électrique possede la meme valeur(intensité) \\\\
+Dans un condensateur plan, le champ électrique est uniforme (lignes de champ paralleles) et la valeur du champ électrique est
+$$E=\dfrac{|U_{ab}|}{d}$$
+et, avec $Q$ (charge totale) et $S$ (surface des armatures)
+$$E=\dfrac{Q}{\varepsilon_{0} \cdot S }$$
 \end{Definition}
+
+
+\subsection{Le champ magnétique}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
