--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -19,7 +19,18 @@ Daher wird der Beweis in zwei Etappen durchgef"uhrt; mit dem \textbf{Induktionsa
 \end{Beweis}\\\\
 
 \begin{Beweis}
-Beweis der Summe ungerader Zahlen
+Beweis der Summe ungerader Zahlen\\
+
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} $\forall n \in \N  :  \sum\limits_{k=1}^n (2k-1) = n^2$ \\\\
+
+\begin{array}{rl}
+\textbf{Induktionsanfang}: & $\sum\limits_{k=1}^1 (2k-1) = 2\cdot 1 -1 = 1 = 1^2  $\\\\
+\textbf{Induktionsvorraussetzung}:&$f"ur ein beliebiges, aber festes $i \in \N$ gilt:  \sum\limits_{k=1}^i (2k-1) = i^2 \\\\
+\textbf{Induktionsbehauptung}: &$man behauptet, dass $\forall n \in \N :  \sum\limits_{k=1}^{n+1} (2k-1) = (n+1)^2$ \\\\
+ \textbf{Induktionsschluss}: & $\sum\limits_{k=1}^{n+1} (2k-1) = \sum\limits_{k=1}^{n} (2k-1) + 2(n+1)-1 = n^2 +2n+1 = (n+1)^2 $ \\\\
+
+ \end{array}
+
 
 \end{Beweis}\\\\
 
