--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -37,14 +37,35 @@ Beweis der Summe ungerader Zahlen\\
 \begin{Beweis}
 Beweis der Bernoullischen Ungleichung\\
 
-\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $S(n) = \sum\limits_{i=1}^n  = \dfrac{n(n+1)}{2}$\\\\
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $ \forall n \in \N \quad n>0 :  \qquad (1+x)^n \geq 1+nx  \qquad;  x\geq -1$ \\\\
 
-Ich mach noch weiter
+\begin{array}{rl}
+
+\textbf{Induktionsanfang}: & $(1+x)^0 = 1 \geq 1 = 1+0x $\\\\
+\textbf{Induktionsvorraussetzung}: & $Es gelte nun: $(1+x)^n \geq 1+nx ; n\in \N_{0} $\\\\
+\textbf{Induktionsbehauptung}: & $ (1+x)^{n+1} \geq 1+(n+1)x $\\\\
+\textbf{Induktionsschluss}: & $ (1+x)^{n+1} = (1+x)^n \cdot (1+x) {\overset{\text{I.V.}} \geq} (1+nx)\cdot(1+x) = nx^2+nx+x+1$\\\\ 
+&$\geq 1+x+nx = 1+(n+1)x   $\\\\
+
+\end{array}
+
 \end{Beweis}\\\\
 
 
 \begin{Beweis}
 Beweis der Summe der Quadratzahlen\\
+
+Mittels Induktion l"asst sich ''nur''  eine vorhandene Formel beweisen.\\
+
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : S(n) = \sum\limits_{i=1}^n i^2 = \dfrac{n(n+1)(2n+1)}{6}\\\\
+
+\begin{array}{rl}
+\textbf{Induktionsanfang}: & $ S(1) = \sum\limits_{i=1}^1 i^2 = 1^2 = 1 = \dfrac{1(1+1)(2+1)}{6}$\\\\
+\textbf{Induktionsvorraussetzung}: & $keine Ahnung was hier rein soll$\\\\
+\textbf{Induktionsbehauptung}: & $S(n+1)=\sum\limits_{i=1}^{n+1} i^2 = \dfrac{(n+1)(n+2)(2(n+1)+1)}{6}$\\\\
+\textbf{Induktionsschluss}: & $S(n) +(n+1)^2 = \dfrac{n(n+1)(2n+1)}{6} +(n+1)^2 = \dfrac{2n^3 +9n^2+13n+6}{6}$\\\\
+& $\dfrac{(n+1)(n+2)(2(n+1)+1)}{6}  = \dfrac{2n^3 +9n^2+13n+6}{6} $\\\\
+\end{array}
 
 \end{Beweis}
 
@@ -61,7 +82,7 @@ $ \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^{n+1} i^2 = \overbrace{\sum\l
 &$= \dfrac{n^3+3n^2+6n+3}{3} $\\\\
 &$= \dfrac{n^3+3n^2+3n+1+3n+2}{3}  $\\\\
 &$ = \dfrac{(n+1)^3}{3} + \dfrac{3n+2}{3} \overbrace{>}^{\textcolor{red}{n\geq0}} \dfrac{(n+1)^3}{3} $
- \end{array}
+\end{array}
 
 \end{Beweis}\\\\
 
@@ -69,5 +90,9 @@ $ \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^{n+1} i^2 = \overbrace{\sum\l
 Summe der Kubikzahlen
 
 \end{Beweis}\\\\
+
+
+
+
 
 Am Besten so viele Induktionen wie m"oglich?
