--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -12,7 +12,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   \begin{align*}
     \int_{a}^{b} f(x)dx & = \lim\limits_{n \rightarrow \infty} U_n = \lim\limits_{n \rightarrow \infty} s_n\\
                         & = \lim\limits_{n \rightarrow \infty} O_n = \lim\limits_{n \rightarrow \infty} S_n\\
-                        & = \lim\limits_{n \rightarrow \infty} \dfrac{b-a}{n}\sum\limits_{k=1}^{n}f(\dfrac{b-a}{n}k)
+                        & = \lim\limits_{n \rightarrow \infty} \dfrac{b-a}{n}\sum\limits_{k=1}^{n}f\left(\dfrac{b-a}{n}\cdot k\right)
   \end{align*}
   $S_n$ und $O_n$ bezeichnen die Obersumme, wohingegen $s_n$ und $U_n$ die Untersumme bezeichnen.
 \end{Definition}
@@ -229,7 +229,7 @@ Abschnittweise Integration:
 
 \begin{Bemerkung}
   Eine Konsequenz davon ist, dass falls $|f(t)|\leq M \; \forall t \in [a;b]$, dann gilt:
-  $$|\int_a^b f(t)dt | \leq M(|b-a|)$$
+  $$\left|\int_a^b f(t)dt \right| \leq M(|b-a|)$$
 \end{Bemerkung}
 GRAAAAAAAAAAPHEN
 \subsection{Integrationsregeln}
@@ -446,7 +446,7 @@ ln, e^x, usw.
   Für die auf dem Intervall $[a;b]$ (also stückweise) stetige Funktion $f$ mit Nullstellen und $x_1,x_2,...,x_n$
   mit $a \leq x_1 \leq x_2 \leq ... \leq x_n \leq b$ ist der Flächeninhalt $A$ zwischen dem Graphen von $f$ und
   der $x_1$-Achse im Intervall $[a;b]$ gegeben durch:
-  $$A= |{\int_a^{x_1} f(x)dx}|+|{\int_{x_1}^{x_2} f(x)dx}|+...+|{\int_{x_{n-1}}^{x_n} f(x)dx}|+|{\int_{x_n}^b f(x)dx}|$$
+  $$A= \left|{\int_a^{x_1} f(x)dx}\right|+\left|{\int_{x_1}^{x_2} f(x)dx}\right|+...+\left|{\int_{x_{n-1}}^{x_n} f(x)dx}\right|+\left|{\int_{x_n}^b f(x)dx}\right|$$
 \end{Definition}
 Bildhaft sieht das folgendermaßen aus:\\
 \definecolor{uuuuuu}{rgb}{0.26666666666666666,0.26666666666666666,0.26666666666666666}
@@ -548,9 +548,9 @@ ytick={0},]
   $\\
   Also gilt:\\
   \begin{align*}
-    A_{-1}^{1} &= |\int_{-1}^0 x^2-2x^3 dx| + |\int_{0}^{\dfrac{1}{2}} x^2-2x^3 dx| + |\int_{\dfrac{1}{2}}^1 x^2-2x^3 dx|\\
-    &= |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{-1}^0| + |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{0}^{0.5}| + |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{0.5}^1|\\
-    &= |0-(-\dfrac{1}{3}-\dfrac{1}{2})| + |\dfrac{1}{24}-\dfrac{1}{32}-0| + |\dfrac{1}{3}-\dfrac{1}{2}- (\dfrac{1}{24}-\dfrac{1}{32})|\\
+    A_{-1}^{1} &= \left|\int_{-1}^0 x^2-2x^3 dx\right| + \left|\int_{0}^{\dfrac{1}{2}} x^2-2x^3 dx\right| + \left|\int_{\dfrac{1}{2}}^1 x^2-2x^3 dx\right|\\
+    &= \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{-1}^0\right| + \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{0}^{0.5}\right| + \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{0.5}^1\right|\\
+    &= \left|0-\left(-\dfrac{1}{3}-\dfrac{1}{2}\right)\right| + \left|\dfrac{1}{24}-\dfrac{1}{32}-0\right| + \left|\dfrac{1}{3}-\dfrac{1}{2}- \left(\dfrac{1}{24}-\dfrac{1}{32}\right)\right|\\
     &= 1 + \dfrac {1}{12} - \dfrac{1}{16}\\
     &= \dfrac{49}{48} \text{  FE}
 \end{align*}
